--- a/package.json
+++ b/package.json
@@ -24,11 +24,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "concurrently": "^6.0.2",
+    "cross-env": "^7.0.3",
+    "d3": "^3.5.17",
+    "datamaps": "^0.4.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "node-sass": "^5.0.0",
+    "object-assign": "^4.0.1",
     "pg": "^8.6.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-pure-lifecycle": "^3.0.0",
+    "react-select": "^0.9.1",
+    "topojson": "^1.6.20"
   },
   "devDependencies": {
     "@babel/core": "^7.13.8",
